[DDW-917] Add block creation table to the previous epoch page - fix for button align

--- a/source/features/widgets/search/components/NoSearchResult.scss
+++ b/source/features/widgets/search/components/NoSearchResult.scss
@@ -1,5 +1,7 @@
 .noSearchResultContainer {
   margin: 0 auto;
+  margin-bottom: 21px;
+  margin-top: 71px;
   max-width: 872px;
   width: 100%;
 
